--- a/admin/login.html
+++ b/admin/login.html
@@ -7,7 +7,7 @@
     <title>Modern Login Form</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
