Migrate from PHP to static HTML and JS for storefront
Replaces PHP files with static HTML files and moves store/product data handling to JavaScript. Updates navigation, product/category rendering, and cart logic to remove server-side PHP dependencies. Refactors JS to fetch and manage products client-side, and hardcodes store info in HTML where needed. This simplifies deployment and enables a fully static storefront.

Co-Authored-By: Neville S Vempeny <90916344+Nevsuper@users.noreply.github.com>

--- a/test.html
+++ b/test.html
@@ -11,5 +11,10 @@
 
         </div>
         <script src = "/assets/js/getProductsJson.js" defer></script>
+        <script>
+
+            let v = products;
+            console.log(v)
+        </script>
     </body>
 </html>
