--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,9 @@
-<?php
-  $data = json_decode(file_get_contents(__DIR__ . "/data/products.json"), true);
-  $store = $data["store"];
-?>
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cart — <?= htmlspecialchars($store["name"]) ?></title>
+  <title>Cart — Luttu's Fashion</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
@@ -15,8 +11,8 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
   <div class="container">
-    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.php">
-      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo"> <?= htmlspecialchars($store["name"]) ?>
+    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="/">
+      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo"> Luttu's Fashion
     </a>
   </div>
 </nav>
@@ -49,7 +45,7 @@
         <div class="card-body">
           <h2 class="h6">Order Summary</h2>
           <div class="d-flex justify-content-between"><span>Items</span><span id="sumItems">0</span></div>
-          <div class="d-flex justify-content-between"><span>Total</span><strong id="sumTotal"><?= htmlspecialchars($store["currency"]) ?>0</strong></div>
+          <div class="d-flex justify-content-between"><span>Total</span><strong id="sumTotal">₹0</strong></div>
           <hr>
           <form id="checkoutForm" class="vstack gap-2">
             <input class="form-control" name="name" placeholder="Your Name" required>
@@ -68,9 +64,7 @@
   </div>
 </main>
 
-<script>
-  window.__STORE__ = <?php echo json_encode($data, JSON_UNESCAPED_UNICODE | JSON_UNESCAPED_SLASHES); ?>;
-</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
