--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-<?php
-  $data = json_decode(file_get_contents(__DIR__ . "/data/products.json"), true);
-  $store = $data["store"];
-  $products = $data["products"];
-?>
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><?= htmlspecialchars($store["name"]) ?> — Boutique</title>
-  <meta name="description" content="Mobile-first boutique storefront for <?= htmlspecialchars($store["name"]) ?>.">
+  <title>Luttu's Fashion — Boutique</title>
+  <meta name="description" content="Mobile-first boutique storefront for Luttu's Fashion.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
@@ -17,21 +12,21 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
   <div class="container">
-    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.php">
-      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo"> <?= htmlspecialchars($store["name"]) ?>
+    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="/">
+      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo"> Luttu's Fashion
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navMain">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="index.php">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#catalog">Shop</a></li>
-        <li class="nav-item"><a class="nav-link" href="cart.php">Cart</a></li>
+        <li class="nav-item"><a class="nav-link" href="/cart.html">Cart</a></li>
       </ul>
       <form class="d-flex gap-2" role="search" onsubmit="return false;">
         <input class="form-control" id="searchInput" type="search" placeholder="Search products…" aria-label="Search">
-        <a class="btn btn-outline-dark position-relative" href="cart.php">
+        <a class="btn btn-outline-dark position-relative" href="/cart.html">
           <i class="bi bi-bag"></i>
           <span class="badge text-bg-dark position-absolute top-0 start-100 translate-middle rounded-pill" id="cartCount">0</span>
         </a>
@@ -43,7 +38,7 @@
 <header class="container py-4">
   <div class="p-4 p-md-5 rounded-4 hero">
     <h1 class="display-6 fw-bold mb-1">Handpicked styles, made with love.</h1>
-    <p class="lead mb-3"><?= htmlspecialchars($store["pickup_note"]) ?></p>
+    <p class="lead mb-3">Orders are picked up from our home boutique. We'll confirm pickup time on WhatsApp.</p>
     <a href="#catalog" class="btn btn-dark btn-lg rounded-3">Shop now</a>
   </div>
 </header>
@@ -54,11 +49,6 @@
     <div class="d-flex gap-2">
       <select id="categoryFilter" class="form-select form-select-sm w-auto">
         <option value="">All categories</option>
-        <?php
-          $cats = array_values(array_unique(array_map(fn($p)=>$p["category"], $products)));
-          sort($cats);
-          foreach ($cats as $c) echo "<option value=\"".htmlspecialchars($c)."\">".htmlspecialchars($c)."</option>";
-        ?>
       </select>
       <select id="sortSelect" class="form-select form-select-sm w-auto">
         <option value="">Sort</option>
@@ -77,7 +67,7 @@
 
 <footer class="border-top py-4">
   <div class="container small d-flex flex-wrap gap-2 justify-content-between align-items-center">
-    <span>© <span id="year"></span> <?= htmlspecialchars($store["name"]) ?></span>
+    <span>© <span id="year"></span> Luttu's Fashion</span>
     <a href="https://wa.me/<?= urlencode(ltrim($store["whatsapp_number"], '+')) ?>" class="link-dark text-decoration-none">
       <i class="bi bi-whatsapp"></i> Chat on WhatsApp
     </a>
@@ -88,6 +78,7 @@
   window.__STORE__ = <?php echo json_encode($data, JSON_UNESCAPED_UNICODE | JSON_UNESCAPED_SLASHES); ?>;
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/getProductsJson.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
 </html>
