--- a/product.html
+++ b/product.html
@@ -1,18 +1,9 @@
-<?php
-  $data = json_decode(file_get_contents(__DIR__ . "/data/products.json"), true);
-  $store = $data["store"];
-  $products = $data["products"];
-  $id = $_GET["id"] ?? "";
-  $product = null;
-  foreach ($products as $p) { if ($p["id"] === $id) { $product = $p; break; } }
-  if (!$product) { header("Location: index.php"); exit; }
-?>
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><?= htmlspecialchars($product["title"]) ?> — <?= htmlspecialchars($store["name"]) ?></title>
+  <title id="pageTitle">Loading…</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
@@ -20,11 +11,12 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
   <div class="container">
-    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.php">
-      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo"> <?= htmlspecialchars($store["name"]) ?>
+    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html">
+      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo">
+      My Boutique
     </a>
     <div class="ms-auto">
-      <a class="btn btn-outline-dark position-relative" href="cart.php">
+      <a class="btn btn-outline-dark position-relative" href="cart.html">
         <i class="bi bi-bag"></i>
         <span class="badge text-bg-dark position-absolute top-0 start-100 translate-middle rounded-pill" id="cartCount">0</span>
       </a>
@@ -36,40 +28,31 @@
   <div class="row g-4">
     <div class="col-12 col-md-6">
       <div class="ratio ratio-1x1 rounded-4 border overflow-hidden bg-light">
-        <img src="<?= htmlspecialchars($product["images"][0]) ?>" class="object-fit-cover" alt="<?= htmlspecialchars($product["title"]) ?>">
+        <img id="mainImg" src="" class="object-fit-cover" alt="Product Image">
       </div>
-      <div class="d-flex gap-2 mt-2">
-        <?php foreach ($product["images"] as $img): ?>
-          <img src="<?= htmlspecialchars($img) ?>" width="56" height="56" class="rounded border thumb" alt="thumb"
-               onclick="document.querySelector('#mainImg').src=this.src">
-        <?php endforeach; ?>
+      <div class="d-flex gap-2 mt-2" id="thumbContainer">
+        <!-- thumbnails added by JS -->
       </div>
     </div>
     <div class="col-12 col-md-6">
-      <h1 class="h4"><?= htmlspecialchars($product["title"]) ?></h1>
+      <h1 class="h4" id="productTitle">Product Title</h1>
       <div class="d-flex align-items-center gap-2 mb-2">
-        <span class="h5 m-0"><?= htmlspecialchars($store["currency"]) ?><?= number_format($product["price"]) ?></span>
-        <?php if ($product["mrp"] > $product["price"]): ?>
-          <span class="text-muted text-decoration-line-through"><?= htmlspecialchars($store["currency"]) ?><?= number_format($product["mrp"]) ?></span>
-        <?php endif; ?>
-        <span class="badge text-bg-success"><i class="bi bi-star-fill"></i> <?= htmlspecialchars($product["rating"]) ?></span>
+        <span class="h5 m-0" id="productPrice">₹0</span>
+        <span class="text-muted text-decoration-line-through" id="productMRP" style="display:none;">₹0</span>
+        <span class="badge text-bg-success" id="productRating"><i class="bi bi-star-fill"></i> 0</span>
       </div>
-      <p class="text-muted"><?= htmlspecialchars($product["description"]) ?></p>
-      <?php if (!empty($product["sizes"])): ?>
-      <div class="mb-3">
+      <p class="text-muted" id="productDescription">Product description here.</p>
+
+      <div class="mb-3" id="sizeContainer" style="display:none;">
         <label class="form-label">Size</label>
-        <div class="d-flex flex-wrap gap-2">
-          <?php foreach ($product["sizes"] as $s): ?>
-            <input type="radio" class="btn-check" name="size" id="size-<?= htmlspecialchars($s) ?>" value="<?= htmlspecialchars($s) ?>">
-            <label class="btn btn-outline-dark btn-sm rounded-pill" for="size-<?= htmlspecialchars($s) ?>"><?= htmlspecialchars($s) ?></label>
-          <?php endforeach; ?>
-        </div>
+        <div class="d-flex flex-wrap gap-2" id="sizeOptions"></div>
       </div>
-      <?php endif; ?>
+
       <div class="d-flex gap-2">
-        <button class="btn btn-dark" id="addToCartBtn" data-id="<?= htmlspecialchars($product["id"]) ?>">Add to Cart</button>
-        <a class="btn btn-outline-dark" href="cart.php">Go to Cart</a>
+        <button class="btn btn-dark" id="addToCartBtn" data-id="">Add to Cart</button>
+        <a class="btn btn-outline-dark" href="cart.html">Go to Cart</a>
       </div>
+
       <div class="mt-3 small">
         <i class="bi bi-truck"></i> Pickup from home boutique · <i class="bi bi-arrow-repeat"></i> Easy WhatsApp support
       </div>
@@ -77,10 +60,8 @@
   </div>
 </main>
 
-<script>
-  window.__STORE__ = <?php echo json_encode($data, JSON_UNESCAPED_UNICODE | JSON_UNESCAPED_SLASHES); ?>;
-</script>
+<script src="assets/js/getProductsJson.js"></script>
+<script src="assets/js/product.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/app.js"></script>
 </body>
 </html>
