--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <div class="row g-3" id="productGrid" data-currency="<?= htmlspecialchars($store["currency"]) ?>">
+  <div class="row g-3" id="productGrid" data-currency="₹">
     <!-- Filled by JS from JSON -->
   </div>
 </main>
@@ -68,15 +68,16 @@
 <footer class="border-top py-4">
   <div class="container small d-flex flex-wrap gap-2 justify-content-between align-items-center">
     <span>© <span id="year"></span> Luttu's Fashion</span>
-    <a href="https://wa.me/<?= urlencode(ltrim($store["whatsapp_number"], '+')) ?>" class="link-dark text-decoration-none">
+    <!-- TODO: Add whatsapp number in js -->
+    <a href="https://wa.me/" class="link-dark text-decoration-none">
       <i class="bi bi-whatsapp"></i> Chat on WhatsApp
     </a>
   </div>
 </footer>
 
-<script>
+<!-- <script>
   window.__STORE__ = <?php echo json_encode($data, JSON_UNESCAPED_UNICODE | JSON_UNESCAPED_SLASHES); ?>;
-</script>
+</script> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/getProductsJson.js"></script>
 <script src="assets/js/app.js"></script>
