Add admin panel and migrate storefront JS to jQuery
Introduces a new admin panel with dashboard, product management, and related UI/UX (admin/index.php, admin.css, admin.js). Refactors storefront JavaScript to use jQuery for DOM manipulation and event handling across app.js, cart.js, cartUtils.js, and product.js. Adds size selection modal, notification system, and improves cart and product page interactivity. Updates HTML files to include jQuery and new scripts. Fixes admin login feedback and captcha verification.

--- a/admin/login.html
+++ b/admin/login.html
@@ -35,9 +35,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
 
-            <div class="success-message" id="message">
-                Login successful! Redirecting...
-            </div>
+            <div class="success-message" id="message"></div>
 
 
         </form>
