--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
@@ -64,8 +65,16 @@
   </div>
 </main>
 
+<!-- Notification container (top-right) -->
+<div id="notifyBox" 
+     style="position: fixed; top: 1rem; right: 1rem; z-index: 9999; display:none;">
+  <div class="alert alert-info shadow" role="alert"></div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/app.js"></script>
+<script src="assets/js/cartUtils.js"></script>
+<script src="assets/js/cart.js"></script>
+<script src="assets/js/getProductsJson.js"></script>
+
 </body>
 </html>
