--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
@@ -45,7 +46,6 @@
 
 <main class="container mb-5" id="catalog">
   <div class="d-flex align-items-center justify-content-between mb-3">
-    <h2 class="h4 m-0">New Arrivals</h2>
     <div class="d-flex gap-2">
       <select id="categoryFilter" class="form-select form-select-sm w-auto">
         <option value="">All categories</option>
@@ -75,11 +75,28 @@
   </div>
 </footer>
 
-<!-- <script>
-  window.__STORE__ = <?php echo json_encode($data, JSON_UNESCAPED_UNICODE | JSON_UNESCAPED_SLASHES); ?>;
-</script> -->
+<!-- Size Selection Modal -->
+<div class="modal fade" id="sizeModal" tabindex="-1" aria-labelledby="sizeModalLabel">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title" id="sizeModalLabel">Select Size</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="modalSizes" class="d-flex flex-wrap gap-2"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="modalAddBtn" class="btn btn-dark">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/getProductsJson.js"></script>
 <script src="assets/js/app.js"></script>
+
+<script src="assets/js/cartUtils.js"></script>
 </body>
 </html>
