--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
   <title id="pageTitle">Loading…</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -62,6 +63,7 @@
 
 <script src="assets/js/getProductsJson.js"></script>
 <script src="assets/js/product.js"></script>
+<script src="assets/js/cartUtils.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
