--- a/admin/index.html
+++ b/admin/index.html
@@ -7,15 +7,21 @@
     <title>Dress Boutique - Admin Panel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="/assets/css/admin.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/admin.css">
 </head>
 
 <body>
+    <!-- Overlay for mobile -->
+    <div class="sidebar-overlay"></div>
+
     <div class="admin-container">
         <!-- Left Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
                 <h3>Dress Boutique Admin</h3>
+                <div class="close-sidebar">
+                    <i class="fas fa-times"></i>
+                </div>
             </div>
             <div class="sidebar-menu">
                 <div class="menu-item active" data-target="dashboard">
@@ -67,7 +73,7 @@
                 <!-- Dashboard Section -->
                 <div class="content-section active" id="dashboard">
                     <h2>Dashboard</h2>
-                    <p>Welcome to your dress store admin panel. Here's an overview of your store.</p>
+                    <p>Welcome to your boutique admin panel. Here's an overview of your store.</p>
 
                     <div class="cards-row">
                         <div class="card">
@@ -155,68 +161,30 @@
                     <h2>Products</h2>
                     <p>Manage your dress collection.</p>
 
-                    <div class="table-container">
+                    <div class="table-container" id="productsTableContainer">
                         <div style="display: flex; justify-content: space-between; align-items: center; padding: 15px;">
                             <h3>All Products</h3>
                             <button class="btn btn-primary">Add New Product</button>
                         </div>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Product</th>
-                                    <th>Category</th>
-                                    <th>Price</th>
-                                    <th>Stock</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Summer Floral Dress</td>
-                                    <td>Casual</td>
-                                    <td>$59.99</td>
-                                    <td>42</td>
-                                    <td>
-                                        <i class="fas fa-edit" style="color: #4caf50; margin-right: 10px; cursor: pointer;"></i>
-                                        <i class="fas fa-trash" style="color: #f44336; cursor: pointer;"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Elegant Evening Gown</td>
-                                    <td>Formal</td>
-                                    <td>$129.99</td>
-                                    <td>15</td>
-                                    <td>
-                                        <i class="fas fa-edit" style="color: #4caf50; margin-right: 10px; cursor: pointer;"></i>
-                                        <i class="fas fa-trash" style="color: #f44336; cursor: pointer;"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Office Professional Dress</td>
-                                    <td>Work</td>
-                                    <td>$79.99</td>
-                                    <td>28</td>
-                                    <td>
-                                        <i class="fas fa-edit" style="color: #4caf50; margin-right: 10px; cursor: pointer;"></i>
-                                        <i class="fas fa-trash" style="color: #f44336; cursor: pointer;"></i>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+
+                        <!-- Table + controls will be injected here -->
+                        <div id="productsTableWrapper"></div>
+                        <div style="margin:10px 0;">
+                            <select id="pageSize" class="form-select" style="width:auto; display:inline-block;">
+                                <option value="10">10 per page</option>
+                                <option value="20">20 per page</option>
+                            </select>
+                        </div>
+                        <div id="pagination" style="margin-top:10px;"></div>
                     </div>
                 </div>
-
                 <!-- Create Product Section -->
                 <div class="content-section" id="create-product">
                     <h2>Create Product</h2>
                     <p>Add a new dress to your collection.</p>
 
                     <div class="card" style="max-width: 800px;">
-                        <form>
+                        <form id="createProductForm">
                             <div class="form-group">
                                 <label for="productName">Product Name</label>
                                 <input type="text" id="productName" placeholder="Enter product name">
@@ -229,46 +197,56 @@
 
                             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                                 <div class="form-group">
-                                    <label for="productPrice">Price ($)</label>
+                                    <label for="productPrice">Price (₹)</label>
                                     <input type="number" id="productPrice" placeholder="0.00" step="0.01">
                                 </div>
 
+
                                 <div class="form-group">
-                                    <label for="productStock">Stock</label>
-                                    <input type="number" id="productStock" placeholder="0">
+                                    <label for="productMRP">MRP (₹)</label>
+                                    <input type="number" id="productMRP" placeholder="0.00" step="0.01">
                                 </div>
                             </div>
 
                             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                                 <div class="form-group">
                                     <label for="productCategory">Category</label>
-                                    <select id="productCategory">
-                                        <option value="">Select Category</option>
-                                        <option value="casual">Casual</option>
-                                        <option value="formal">Formal</option>
-                                        <option value="work">Work</option>
-                                        <option value="party">Party</option>
+                                    <select id="productCategory" onchange="toggleNewCategoryInput()">
+                                        
                                     </select>
+                                </div>
+
+                                <div class="form-group" id="newCategoryGroup" style="display: none;">
+                                    <label for="newCategory">Enter New Category</label>
+                                    <input type="text" id="newCategory" placeholder="Type new category">
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="productStatus">Status</label>
-                                    <select id="productStatus">
-                                        <option value="active">Active</option>
-                                        <option value="draft">Draft</option>
+                                    <label for="productStockStatus">Stock Status</label>
+                                    <select id="productStockStatus">
+                                        <option value="InStock">In stock</option>
+                                        <option value="OutOfStock">Out of Stock</option>
                                     </select>
                                 </div>
                             </div>
 
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="productImage">Product Image</label>
                                 <input type="file" id="productImage">
-                            </div>
+                            </div> -->
+
+                            <!-- <div class="upload-box" id="uploadBox">
+                                <p>Click or Drop Images Here (Max 1MB each)</p>
+                                <input type="file" id="productImages" accept="image/*" multiple>
+                            </div> -->
+
+                            <div class="preview" id="preview"></div>
 
                             <button type="submit" class="btn btn-primary">Create Product</button>
                         </form>
                     </div>
                 </div>
+
 
                 <!-- Other sections would be defined here -->
                 <div class="content-section" id="orders">
@@ -298,7 +276,8 @@
         </div>
     </div>
 
-    <script src = "/assets/js/admin.js" defer ></script>
+    <script src="/assets/js/admin.js"></script>
+    <script src="/assets/js/getProductsJson.js"></script>
 </body>
 
 </html>
