--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="container small d-flex flex-wrap gap-2 justify-content-between align-items-center">
     <span>© <span id="year"></span> Luttu's Fashion</span>
     <!-- TODO: Add whatsapp number in js -->
-    <a href="https://wa.me/" class="link-dark text-decoration-none">
+    <a href="https://wa.me/" id="chatLink" class="link-dark text-decoration-none">
       <i class="bi bi-whatsapp"></i> Chat on WhatsApp
     </a>
   </div>
