Refactor admin actions and improve product handling
Refactored admin/actions.php to use an enum-based action type switch for create, edit, and delete operations, improving code structure and error handling. Enhanced product creation and editing logic, including file upload validation and database operations. Updated getProducts.php to cast product fields to appropriate types for better JSON output. Minor fixes in admin.js and admin/index.html for notification and size handling. Added new product images to assets/img.

--- a/admin/index.html
+++ b/admin/index.html
@@ -271,8 +271,7 @@
 
 
                             <!-- Add Sizes Modal -->
-                            <div class="modal fade" id="addSizeModal" tabindex="-1" aria-labelledby="addSizeModalLabel"
-                                aria-hidden="true">
+                            <div class="modal fade" id="addSizeModal" tabindex="-1" aria-labelledby="addSizeModalLabel">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content  dark-modal">
                                         <div class="modal-header">
@@ -425,8 +424,8 @@
     <div id="notifyBox" style="position: fixed; top: 1rem; right: 1rem; z-index: 9999; display:none;">
         <div class="alert alert-info shadow" role="alert"></div>
     </div>
-    <script src="/assets/js/admin.js"></script>
     <script src="/assets/js/getProductsJson.js"></script>
+    <script src="/assets/js/admin.js"></script>
 </body>
 
 </html>
