Refactor admin panel and product management logic
Removed legacy admin and product PHP files, consolidating product CRUD operations into actions.php with improved validation and error handling. Updated admin.js to use AJAX for product deletion and editing, improved notification handling, and fixed minor UI/UX issues. Cleaned up the admin panel UI by removing unused dashboard sections and menu items, and added new product images to assets.

--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
         <!-- Left Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
-                <h3>Dress Boutique Admin</h3>
+                <h3>Boutique Admin</h3>
                 <div class="close-sidebar">
                     <i class="fas fa-times"></i>
                 </div>
@@ -37,18 +37,6 @@
                 <div class="menu-item" data-target="create-product">
                     <i class="fas fa-plus-circle"></i>
                     <span>Create Product</span>
-                </div>
-                <div class="menu-item" data-target="orders">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span>Orders</span>
-                </div>
-                <div class="menu-item" data-target="customers">
-                    <i class="fas fa-users"></i>
-                    <span>Customers</span>
-                </div>
-                <div class="menu-item" data-target="analytics">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Analytics</span>
                 </div>
                 <div class="menu-item" data-target="settings">
                     <i class="fas fa-cog"></i>
@@ -75,87 +63,7 @@
                 <!-- Dashboard Section -->
                 <div class="content-section active" id="dashboard">
                     <h2>Dashboard</h2>
-                    <p>Welcome to your boutique admin panel. Here's an overview of your store.</p>
-
-                    <div class="cards-row">
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="card-title">Total Sales</div>
-                                <div class="card-icon">
-                                    <i class="fas fa-dollar-sign"></i>
-                                </div>
-                            </div>
-                            <div class="card-value">$24,560</div>
-                            <div class="card-growth">+12% from last month</div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="card-title">Orders</div>
-                                <div class="card-icon">
-                                    <i class="fas fa-shopping-bag"></i>
-                                </div>
-                            </div>
-                            <div class="card-value">356</div>
-                            <div class="card-growth">+8% from last month</div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="card-title">Customers</div>
-                                <div class="card-icon">
-                                    <i class="fas fa-users"></i>
-                                </div>
-                            </div>
-                            <div class="card-value">1,243</div>
-                            <div class="card-growth">+5% from last month</div>
-                        </div>
-                    </div>
-
-                    <div class="table-container">
-                        <h3 style="padding: 15px;">Recent Orders</h3>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Order ID</th>
-                                    <th>Customer</th>
-                                    <th>Date</th>
-                                    <th>Amount</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>#ORD-7562</td>
-                                    <td>Sarah Johnson</td>
-                                    <td>Jun 24, 2023</td>
-                                    <td>$156.00</td>
-                                    <td>Delivered</td>
-                                </tr>
-                                <tr>
-                                    <td>#ORD-7561</td>
-                                    <td>Michael Brown</td>
-                                    <td>Jun 23, 2023</td>
-                                    <td>$89.50</td>
-                                    <td>Processing</td>
-                                </tr>
-                                <tr>
-                                    <td>#ORD-7560</td>
-                                    <td>Emily Davis</td>
-                                    <td>Jun 23, 2023</td>
-                                    <td>$245.75</td>
-                                    <td>Shipped</td>
-                                </tr>
-                                <tr>
-                                    <td>#ORD-7559</td>
-                                    <td>John Wilson</td>
-                                    <td>Jun 22, 2023</td>
-                                    <td>$72.25</td>
-                                    <td>Delivered</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    <p>Welcome to your boutique admin panel.</p>
                 </div>
 
                 <!-- Products Section -->
@@ -385,25 +293,6 @@
                     </div>
                 </div>
 
-
-                <!-- Other sections would be defined here -->
-                <!-- <div class="content-section" id="orders">
-                    <h2>Orders</h2>
-                    <p>Manage and track customer orders.</p>
-
-                </div>
-
-                <div class="content-section" id="customers">
-                    <h2>Customers</h2>
-                    <p>View and manage your customer database.</p>
-
-                </div>
-
-                <div class="content-section" id="analytics">
-                    <h2>Analytics</h2>
-                    <p>Analyze your store performance.</p>
-
-                </div> -->
 
                 <div class="content-section" id="settings">
                     <h2>Settings</h2>
