--- a/cart.html
+++ b/cart.html
@@ -50,10 +50,10 @@
           <hr>
           <form id="checkoutForm" class="vstack gap-2">
             <input class="form-control" name="name" placeholder="Your Name" required>
-            <input class="form-control" name="phone" placeholder="Phone (WhatsApp)" required>
-            <input class="form-control" name="address" placeholder="Pickup address / landmark" required>
-            <input class="form-control" name="pickup" placeholder="Preferred pickup date & time">
-            <textarea class="form-control" name="notes" placeholder="Any notes"></textarea>
+            <input class="form-control" name="phone" placeholder="Phone (optional)" >
+            <input class="form-control" name="address" placeholder="Pickup address / landmark (optional)">
+            <input class="form-control" name="pickup" placeholder="Preferred pickup date & time (optional)">
+            <textarea class="form-control" name="notes" placeholder="Any notes (optional)"></textarea>
             <button type="submit" class="btn btn-success w-100">
               <i class="bi bi-whatsapp"></i> Place Order on WhatsApp
             </button>
