--- a/product.html
+++ b/product.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,60 +10,66 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="assets/css/styles.css" rel="stylesheet">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
-  <div class="container">
-    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html">
-      <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo">
-      My Boutique
-    </a>
-    <div class="ms-auto">
-      <a class="btn btn-outline-dark position-relative" href="cart.html">
-        <i class="bi bi-bag"></i>
-        <span class="badge text-bg-dark position-absolute top-0 start-100 translate-middle rounded-pill" id="cartCount">0</span>
+  <nav class="navbar navbar-expand-lg bg-body sticky-top border-bottom">
+    <div class="container">
+      <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html">
+        <img src="assets/img/logo.jpg" width="28" height="28" alt="Logo">
+        My Boutique
       </a>
+      <div class="ms-auto">
+        <a class="btn btn-outline-dark position-relative" href="cart.html">
+          <i class="bi bi-bag"></i>
+          <span class="badge text-bg-dark position-absolute top-0 start-100 translate-middle rounded-pill"
+            id="cartCount">0</span>
+        </a>
+      </div>
     </div>
+  </nav>
+
+  <main class="container py-4">
+    <div class="row g-4">
+      <div class="col-12 col-md-6">
+        <div class="ratio ratio-1x1 rounded-4 border overflow-hidden bg-light">
+          <img id="mainImg" src="" class="object-fit-cover" alt="Product Image">
+        </div>
+        <div class="d-flex gap-2 mt-2" id="thumbContainer">
+          <!-- thumbnails added by JS -->
+        </div>
+      </div>
+      <div class="col-12 col-md-6">
+        <h1 class="h4" id="productTitle">Product Title</h1>
+        <div class="d-flex align-items-center gap-2 mb-2">
+          <span class="h5 m-0" id="productPrice">₹0</span>
+          <span class="text-muted text-decoration-line-through" id="productMRP" style="display:none;">₹0</span>
+        </div>
+        <p class="text-muted" id="productDescription">Product description here.</p>
+
+        <div class="mb-3" id="sizeContainer" style="display:none;">
+          <label class="form-label">Size</label>
+          <div class="d-flex flex-wrap gap-2" id="sizeOptions"></div>
+        </div>
+
+        <div class="d-flex gap-2">
+          <button class="btn btn-dark" id="addToCartBtn" data-id="">Add to Cart</button>
+          <a class="btn btn-outline-dark" href="cart.html">Go to Cart</a>
+        </div>
+
+        <div class="mt-3 small">
+          <i class="bi bi-truck"></i> Pickup from home boutique · <i class="bi bi-arrow-repeat"></i> Easy WhatsApp
+          support
+        </div>
+      </div>
+    </div>
+  </main>
+  <div id="notifyBox" style="position: fixed; top: 1rem; right: 1rem; z-index: 9999; display:none;">
+    <div class="alert alert-info shadow" role="alert"></div>
   </div>
-</nav>
-
-<main class="container py-4">
-  <div class="row g-4">
-    <div class="col-12 col-md-6">
-      <div class="ratio ratio-1x1 rounded-4 border overflow-hidden bg-light">
-        <img id="mainImg" src="" class="object-fit-cover" alt="Product Image">
-      </div>
-      <div class="d-flex gap-2 mt-2" id="thumbContainer">
-        <!-- thumbnails added by JS -->
-      </div>
-    </div>
-    <div class="col-12 col-md-6">
-      <h1 class="h4" id="productTitle">Product Title</h1>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <span class="h5 m-0" id="productPrice">₹0</span>
-        <span class="text-muted text-decoration-line-through" id="productMRP" style="display:none;">₹0</span> 
-      </div>
-      <p class="text-muted" id="productDescription">Product description here.</p>
-
-      <div class="mb-3" id="sizeContainer" style="display:none;">
-        <label class="form-label">Size</label>
-        <div class="d-flex flex-wrap gap-2" id="sizeOptions"></div>
-      </div>
-
-      <div class="d-flex gap-2">
-        <button class="btn btn-dark" id="addToCartBtn" data-id="">Add to Cart</button>
-        <a class="btn btn-outline-dark" href="cart.html">Go to Cart</a>
-      </div>
-
-      <div class="mt-3 small">
-        <i class="bi bi-truck"></i> Pickup from home boutique · <i class="bi bi-arrow-repeat"></i> Easy WhatsApp support
-      </div>
-    </div>
-  </div>
-</main>
-
-<script src="assets/js/getProductsJson.js"></script>
-<script src="assets/js/product.js"></script>
-<script src="assets/js/cartUtils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/getProductsJson.js"></script>
+  <script src="assets/js/product.js"></script>
+  <script src="assets/js/cartUtils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
