Fix product edit bugs and improve admin UI
Corrected product edit logic in actions.php to use 'name' instead of 'title' and fixed variable assignments. Updated admin/index.html and admin.js to fix typos in element IDs, align stock status values, and improve stock status conversion. Added a new product thumbnail image and a test HTML file for Bootstrap toasts.

--- a/admin/index.html
+++ b/admin/index.html
@@ -127,7 +127,7 @@
                                         </div>
                                         <div class="form-group mb-3">
                                             <label>Available Sizes</label>
-                                            <div id="eidtSizesPanel" class="d-flex flex-wrap gap-2 mb-3"></div>
+                                            <div id="editSizesPanel" class="d-flex flex-wrap gap-2 mb-3"></div>
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="editProductStockStatus">Stock Status</label>
@@ -233,8 +233,8 @@
                                 <div class="form-group">
                                     <label for="productStockStatus">Stock Status*</label>
                                     <select id="productStockStatus" required>
-                                        <option value="1">In stock</option>
-                                        <option value="0">Out of Stock</option>
+                                        <option value="InStock">In stock</option>
+                                        <option value="OutOfStock">Out of Stock</option>
                                     </select>
                                 </div>
                             </div>
