--- a/admin/login.html
+++ b/admin/login.html
@@ -35,7 +35,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
 
-            <div class="success-message" id="message"></div>
+            <div class="success-message" id="successMessage"></div>
 
 
         </form>
