--- a/test.html
+++ b/test.html
@@ -1,76 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Simple Bootstrap Toasts</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    #toastContainer {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-      z-index: 1055;
-    }
-
-    .toast-success {
-      background-color: #8af3a3 !important;
-      color: #000;
-    }
-    .toast-body {
-      color: #000;
-    }
-
-    .toast-error {
-      background-color: #f38590 !important;
-      color: #fff;
-    }
-
-    .toast-info {
-      background-color: #77a6ec !important;
-      color: #fff;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Disabled Button</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.min.js"></script>
 </head>
+<body class="p-4">
+  <style> body {
+    background-color: black;
+  }</style>
+  <button type="button" class="btn btn-primary disabled" >
+    Disabled Button
+  </button>
 
-<body>
-  <!-- Toast container (top-right corner) -->
-  <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100">
-    <div id="myToast" class="toast text-white border-0 " role="alert">
-      <div class="d-flex">
-        <div class="toast-body">Default message</div>
-      </div>
-    </div>
-  </div>
-
-  <button onclick="showToast('✅ Success! Operation completed.', 'success')" class="btn btn-success">Show
-    Success</button>
-  <button onclick="showToast('❌ Error! Something went wrong.', 'error')" class="btn btn-danger">Show Error</button>
-  <button onclick="showToast('ℹ️ Info! Check the details.', 'info')" class="btn btn-info">Show Info</button>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function showToast(message, type) {
-      var $toast = $('#myToast');
-
-      // Reset classes
-      // $toast.removeClass('toast-success toast-error toast-info');
-
-      // // Apply color based on type
-      // if (type === 'success') $toast.addClass('toast-success');
-      // else if (type === 'error') $toast.addClass('toast-error');
-      // else $toast.addClass('toast-info');
-
-      // Set message
-      $toast.find('.toast-body').text(message);
-
-      // Show toast
-      var toast = new bootstrap.Toast($toast[0]);
-      toast.show();
-    }
-    showToast("Data saved successfully!", "success");
-  </script>
 </body>
-
 </html>
